Update cart logic
